<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_220sdp"
    android:layout_height="match_parent"
    android:padding="@dimen/_8sdp"

    >


    <TextView
        android:id="@+id/title_Dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_5sdp"
        android:text="@string/dialog_title"
        android:textColor="@color/black_head"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_Dialog"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_5sdp"
        android:text="@string/dialog_msg"
        android:textColor="@color/black_head"
        android:textSize="@dimen/_10ssp" />

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/textDialog"

        android:layout_marginTop="@dimen/_8sdp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tv_dont_allow"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:background="@android:color/white"
            android:gravity="center"
            android:text="@string/dont_allow"
            android:textColor="@color/light_blue"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_ok"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:background="@android:color/white"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@color/light_blue"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>