<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/landing_bg">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="@dimen/_60sdp"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/smiley"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_130sdp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/navi_avatar" />


        <TextView
            android:id="@+id/msg"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/smiley"
            android:layout_marginLeft="@dimen/_40sdp"
            android:layout_marginRight="@dimen/_40sdp"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/create_acc"
            android:textColor="@color/white" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70sdp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tv_yes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_weight="1"
            android:background="@color/light_blue"
            android:gravity="center"
            android:text="@string/create_acc_yes"
            style="@style/Text"

            android:textStyle="bold" />

        <View
            android:layout_width="@dimen/_1sdp"
            android:layout_height="match_parent"
            android:background="@color/white" />

        <TextView
            android:id="@+id/tv_no"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_weight="1"
            android:background="@color/light_blue"
            android:gravity="center"
            android:text="@string/create_acc_no"
            style="@style/Text"

            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>