<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_navy">
    <TextView
        android:padding="@dimen/_5sdp"
        android:textColor="@color/white"
        android:background="@color/red_header"
        android:id="@+id/tv_empty"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:layout_below="@+id/tv_empty"
        android:id="@+id/iv_close"
        android:layout_width="@dimen/_15sdp"
        android:layout_height="@dimen/_15sdp"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/_10sdp"
        android:src="@drawable/close" />

    <TextView
        android:id="@+id/tc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_22sdp"
        android:text="@string/TC"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"

        />

    <View
        android:id="@+id/tc_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_below="@+id/tc"
        android:background="@color/line_tandc" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/ll_bottom"
        android:layout_below="@id/tc_view"
        android:layout_marginBottom="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:scrollbarSize="@dimen/_5sdp"
        android:scrollbars="vertical">

        <TextView
            android:id="@+id/tv_tc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:autoLink="web"
            android:clickable="true"
            android:lineSpacingExtra="@dimen/_4sdp"
            android:linksClickable="true"
            android:scrollbars="vertical"
            android:text="@string/tc"
            android:textColor="@color/white"
            android:textColorLink="@color/white"
            android:textSize="@dimen/_15ssp" />

    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_i_agree"
            style="@style/Text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/light_blue"
            android:gravity="center"
            android:text="@string/i_agree"
            android:textStyle="bold" />

        <View
            android:layout_width=".5dp"
            android:layout_height="match_parent"
            android:background="@color/white" />

        <TextView
            android:id="@+id/tv_contact_us"
            style="@style/Text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/light_blue"
            android:gravity="center"
            android:text="@string/contact_us"
            android:textStyle="bold" />


    </LinearLayout>

    <fr.castorflex.android.circularprogressbar.CircularProgressBar xmlns:android="http://schemas.android.com/apk/res/android"

        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/homeloader"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:indeterminate="true"
        android:visibility="gone"
        app:cpb_color="@color/colorAccent"
        app:cpb_min_sweep_angle="10"
        app:cpb_rotation_speed="1.0"
        app:cpb_stroke_width="4dp"
        app:cpb_sweep_speed="1.0" />
</RelativeLayout>
