<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/landing_bg"
    tools:context="com.tobaccocessation.activity.CreateAccountActivity">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"/>

    <TextView
        android:visibility="gone"
        android:padding="@dimen/_5sdp"
        android:layout_below="@+id/toolbar"
        android:textColor="@color/white"
        android:background="@color/red_header"
        android:id="@+id/tv_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ScrollView
        android:layout_below="@id/tv_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/ll_bottom"
        android:layout_marginRight="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_65sdp"
        android:scrollbarSize="@dimen/_5sdp"
        android:scrollbars="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp">

            <RelativeLayout
                android:id="@+id/img"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/navi_avatar"
                    android:layout_width="@dimen/_130sdp"
                    android:layout_height="@dimen/_130sdp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:src="@drawable/navi_avatar" />

                <TextView
                    android:id="@+id/create_account"
                    style="@style/Text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/navi_avatar"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:gravity="center"
                    android:text="@string/create_account" />
            </RelativeLayout>


            <EditText
                android:id="@+id/et_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/img"
                android:layout_marginTop="@dimen/_40sdp"
                android:backgroundTint="@android:color/white"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp" />

            <TextView
                android:id="@+id/tv_firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_first_name"
                android:layout_marginLeft="@dimen/_2sdp"
                android:layout_marginTop="-5dp"
                android:text="@string/first_name"
                android:textColor="@color/white"
                android:textSize="@dimen/_9ssp" />

            <EditText
                android:id="@+id/et_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_firstName"
                android:layout_marginTop="@dimen/_5sdp"
                android:backgroundTint="@android:color/white"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp" />

            <TextView
                android:id="@+id/tv_lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_last_name"
                android:layout_marginLeft="@dimen/_2sdp"
                android:layout_marginTop="-5dp"
                android:text="@string/last_name"
                android:textColor="@color/white"
                android:textSize="@dimen/_9ssp" />

            <EditText
                android:id="@+id/et_phone_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_lastName"
                android:layout_marginTop="@dimen/_5sdp"
                android:backgroundTint="@android:color/white"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="10"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp" />

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_phone_no"
                android:layout_marginLeft="@dimen/_2sdp"
                android:layout_marginTop="-5dp"
                android:text="@string/phone_no"
                android:textColor="@color/white"
                android:textSize="@dimen/_9ssp" />

            <EditText
                android:id="@+id/et_email"
                style="@style/Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_phone"
                android:layout_marginTop="@dimen/_5sdp"
                android:backgroundTint="@android:color/white"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_email"
                android:layout_marginLeft="@dimen/_2sdp"
                android:layout_marginTop="-5dp"
                android:text="@string/email"
                android:textColor="@color/white"
                android:textSize="@dimen/_9ssp" />

            <EditText

                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_email"
                android:layout_marginTop="@dimen/_5sdp"
                android:backgroundTint="@android:color/white"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp" />

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_password"
                android:layout_marginLeft="@dimen/_2sdp"
                android:layout_marginTop="-5dp"
                android:text="@string/password"
                android:textColor="@color/white"
                android:textSize="@dimen/_9ssp" />

            <EditText
                android:id="@+id/et_confirm_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_password"
                android:layout_marginTop="@dimen/_5sdp"
                android:backgroundTint="@android:color/white"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp" />

            <TextView
                android:id="@+id/tv_confirm_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_confirm_pass"
                android:layout_marginBottom="@dimen/_70sdp"
                android:layout_marginLeft="@dimen/_2sdp"
                android:layout_marginTop="-5dp"
                android:text="@string/confirm_password"
                android:textColor="@color/white"
                android:textSize="@dimen/_9ssp" />


        </RelativeLayout>
    </ScrollView>


    <RelativeLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70sdp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:gravity="bottom">


        <TextView
            android:id="@+id/tv_next"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_blue"
            android:gravity="center"
            android:text="@string/next"
            android:textStyle="bold" />
    </RelativeLayout>

    <fr.castorflex.android.circularprogressbar.CircularProgressBar xmlns:android="http://schemas.android.com/apk/res/android"

        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/homeloader"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_below="@id/tv_retry"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:indeterminate="true"
        android:visibility="gone"
        app:cpb_color="@color/colorAccent"
        app:cpb_min_sweep_angle="10"
        app:cpb_rotation_speed="1.0"
        app:cpb_stroke_width="4dp"
        app:cpb_sweep_speed="1.0" />
</RelativeLayout>
