<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/landing_bg"
    >

    <include
        android:id="@+id/my_toolbar"
        layout="@layout/toolbar" />


    <!--<android.support.v7.widget.Toolbar-->
    <!--android:id="@+id/toolbar"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:background="@color/light_blue">-->

    <!--<RelativeLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content">-->

    <!--<ImageView-->
    <!--android:id="@+id/iv_back_arrow"-->
    <!--android:layout_width="@dimen/_18sdp"-->
    <!--android:layout_height="@dimen/_18sdp"-->
    <!--android:src="@drawable/ic_arrow_back" />-->

    <!--<ImageView-->

    <!--android:layout_width="@dimen/_18sdp"-->
    <!--android:layout_height="@dimen/_18sdp"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:src="@drawable/video_icon_disabled" />-->

    <!--<ImageView-->
    <!--android:layout_width="@dimen/_18sdp"-->
    <!--android:layout_height="@dimen/_18sdp"-->
    <!--android:layout_alignParentRight="true"-->
    <!--android:layout_marginRight="@dimen/_10sdp"-->
    <!--android:src="@drawable/chat_con_disabled" />-->
    <!--</RelativeLayout>-->

    <!--</android.support.v7.widget.Toolbar>-->

    <RelativeLayout

        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/_90sdp"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/smiley"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/navi_avatar" />


        <TextView
            android:id="@+id/tv_head"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/smiley"
            android:gravity="center_horizontal"
            android:padding="@dimen/_10sdp"
            android:text="@string/hi"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tv_msg"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_head"
            android:layout_marginLeft="@dimen/_40sdp"
            android:layout_marginRight="@dimen/_40sdp"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/hi_txt" />
    </RelativeLayout>

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="@dimen/_65sdp"
        android:layout_alignParentBottom="true">


        <TextView
            android:id="@+id/tv_next"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:background="@color/light_blue"
            android:gravity="center"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />
    </RelativeLayout>
</RelativeLayout>
